--- a/templates/t2pesell.html
+++ b/templates/t2pesell.html
@@ -122,15 +122,7 @@
                 <div class="row">
                     <div class="col-6 col-md-3">
                         <div class="quantity-box text-center">
-                            <h3>Pantallas</h3>
-                            <button class="btn btn-primary" id="decreaseScreens">-</button>
-                            <span id="quantityScreens">0</span>
-                            <button class="btn btn-primary" id="increaseScreens">+</button>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3">
-                        <div class="quantity-box text-center">
-                            <h3>Camaras</h3>
+                            <h3>Cameras</h3>
                             <button class="btn btn-primary" id="decreaseCameras">-</button>
                             <span id="quantityCameras">0</span>
                             <button class="btn btn-primary" id="increaseCameras">+</button>
@@ -138,38 +130,116 @@
                     </div>
                     <div class="col-6 col-md-3">
                         <div class="quantity-box text-center">
-                            <h3>Baterias</h3>
-                            <button class="btn btn-primary" id="decreaseBatteries">-</button>
-                            <span id="quantityBatteries" font>0</span>
-                            <button class="btn btn-primary" id="increaseBatteries">+</button>
+                            <h3>Biometric Sensors</h3>
+                            <button class="btn btn-primary" id="decreaseBiometricSensors">-</button>
+                            <span id="quantityBiometricSensors">0</span>
+                            <button class="btn btn-primary" id="increaseBiometricSensors">+</button>
                         </div>
                     </div>
                     <div class="col-6 col-md-3">
                         <div class="quantity-box text-center">
-                            <h3>Procesadores</h3>
-                            <button class="btn btn-primary" id="decreaseProcessors">-</button>
-                            <span id="quantityProcessors">0</span>
-                            <button class="btn btn-primary" id="increaseProcessors">+</button>
+                            <h3>Baseband</h3>
+                            <button class="btn btn-primary" id="decreaseBaseband">-</button>
+                            <span id="quantityBaseband">0</span>
+                            <button class="btn btn-primary" id="increaseBaseband">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Power Management</h3>
+                            <button class="btn btn-primary" id="decreasePowerManagement">-</button>
+                            <span id="quantityPowerManagement">0</span>
+                            <button class="btn btn-primary" id="increasePowerManagement">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Processor</h3>
+                            <button class="btn btn-primary" id="decreaseProcessor">-</button>
+                            <span id="quantityProcessor">0</span>
+                            <button class="btn btn-primary" id="increaseProcessor">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>NAND</h3>
+                            <button class="btn btn-primary" id="decreaseNAND">-</button>
+                            <span id="quantityNAND">0</span>
+                            <button class="btn btn-primary" id="increaseNAND">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>DRAM</h3>
+                            <button class="btn btn-primary" id="decreaseDRAM">-</button>
+                            <span id="quantityDRAM">0</span>
+                            <button class="btn btn-primary" id="increaseDRAM">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Accelerometer</h3>
+                            <button class="btn btn-primary" id="decreaseAccelerometer">-</button>
+                            <span id="quantityAccelerometer">0</span>
+                            <button class="btn btn-primary" id="increaseAccelerometer">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Battery</h3>
+                            <button class="btn btn-primary" id="decreaseBattery">-</button>
+                            <span id="quantityBattery">0</span>
+                            <button class="btn btn-primary" id="increaseBattery">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Microphone</h3>
+                            <button class="btn btn-primary" id="decreaseMicrophone">-</button>
+                            <span id="quantityMicrophone">0</span>
+                            <button class="btn btn-primary" id="increaseMicrophone">+</button>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <div class="quantity-box text-center">
+                            <h3>Speakers</h3>
+                            <button class="btn btn-primary" id="decreaseSpeakers">-</button>
+                            <span id="quantitySpeakers">0</span>
+                            <button class="btn btn-primary" id="increaseSpeakers">+</button>
                         </div>
                     </div>
                     <div class="text-center mt-4">
                         <h4>Resumen de Cantidades</h4>
-                        <p>Total de Pantallas: <span id="totalScreens">0</span></p>
-                        <p>Total de Camaras: <span id="totalCameras">0</span></p>
-                        <p>Total de Baterias: <span id="totalBatteries">0</span></p>
-                        <p>Total de Procesadores: <span id="totalProcessors">0</span></p>
+                        <p>Total de Cameras: <span id="totalCameras">0</span></p>
+                        <p>Total de Biometric Sensors: <span id="totalBiometricSensors">0</span></p>
+                        <p>Total de Baseband: <span id="totalBaseband">0</span></p>
+                        <p>Total de Power Management: <span id="totalPowerManagement">0</span></p>
+                        <p>Total de Processor: <span id="totalProcessor">0</span></p>
+                        <p>Total de NAND: <span id="totalNAND">0</span></p>
+                        <p>Total de DRAM: <span id="totalDRAM">0</span></p>
+                        <p>Total de Accelerometer: <span id="totalAccelerometer">0</span></p>
+                        <p>Total de Battery: <span id="totalBattery">0</span></p>
+                        <p>Total de Microphone: <span id="totalMicrophone">0</span></p>
+                        <p>Total de Speakers: <span id="totalSpeakers">0</span></p>
                         <button id="guardarCantidadesButton">Solicitar Piezas</button>
-
                     </div>
                 </div>
             </div>
         </div>
+
         <script>
             const buttons = [
-                { id: "Screens", displayId: "quantityScreens", totalDisplayId: "totalScreens" },
                 { id: "Cameras", displayId: "quantityCameras", totalDisplayId: "totalCameras" },
-                { id: "Batteries", displayId: "quantityBatteries", totalDisplayId: "totalBatteries" },
-                { id: "Processors", displayId: "quantityProcessors", totalDisplayId: "totalProcessors" },
+                { id: "BiometricSensors", displayId: "quantityBiometricSensors", totalDisplayId: "totalBiometricSensors" },
+                { id: "Baseband", displayId: "quantityBaseband", totalDisplayId: "totalBaseband" },
+                { id: "PowerManagement", displayId: "quantityPowerManagement", totalDisplayId: "totalPowerManagement" },
+                { id: "Processor", displayId: "quantityProcessor", totalDisplayId: "totalProcessor" },
+                { id: "NAND", displayId: "quantityNAND", totalDisplayId: "totalNAND" },
+                { id: "DRAM", displayId: "quantityDRAM", totalDisplayId: "totalDRAM" },
+                { id: "Accelerometer", displayId: "quantityAccelerometer", totalDisplayId: "totalAccelerometer" },
+                { id: "Battery", displayId: "quantityBattery", totalDisplayId: "totalBattery" },
+                { id: "Microphone", displayId: "quantityMicrophone", totalDisplayId: "totalMicrophone" },
+                { id: "Speakers", displayId: "quantitySpeakers", totalDisplayId: "totalSpeakers" },
             ];
 
             buttons.forEach(({ id, displayId, totalDisplayId }) => {
@@ -177,6 +247,7 @@
                 const increaseButton = document.getElementById(`increase${id}`);
                 const quantityDisplay = document.getElementById(displayId);
                 let quantity = 0;
+
                 decreaseButton.addEventListener("click", () => {
                     if (quantity > 0) {
                         quantity--;
@@ -184,28 +255,41 @@
                         updateTotalDisplay();
                     }
                 });
+
                 increaseButton.addEventListener("click", () => {
                     quantity++;
                     updateQuantityDisplay();
                     updateTotalDisplay();
                 });
+
                 function updateQuantityDisplay() {
                     quantityDisplay.textContent = quantity;
                 }
+
                 function updateTotalDisplay() {
                     const totalDisplay = document.getElementById(totalDisplayId);
                     totalDisplay.textContent = quantity;
                 }
             });
+
             const guardarCantidadesButton = document.getElementById("guardarCantidadesButton");
             guardarCantidadesButton.addEventListener("click", updateQuantities);
+
             function updateQuantities() {
                 const data = {
-                    screens: parseInt(document.getElementById("quantityScreens").textContent),
                     cameras: parseInt(document.getElementById("quantityCameras").textContent),
-                    batteries: parseInt(document.getElementById("quantityBatteries").textContent),
-                    processors: parseInt(document.getElementById("quantityProcessors").textContent)
+                    biometric_sensors: parseInt(document.getElementById("quantityBiometricSensors").textContent),
+                    baseband: parseInt(document.getElementById("quantityBaseband").textContent),
+                    power_management: parseInt(document.getElementById("quantityPowerManagement").textContent),
+                    processor: parseInt(document.getElementById("quantityProcessor").textContent),
+                    nand: parseInt(document.getElementById("quantityNAND").textContent),
+                    dram: parseInt(document.getElementById("quantityDRAM").textContent),
+                    accelerometer: parseInt(document.getElementById("quantityAccelerometer").textContent),
+                    battery: parseInt(document.getElementById("quantityBattery").textContent),
+                    microphone: parseInt(document.getElementById("quantityMicrophone").textContent),
+                    speakers: parseInt(document.getElementById("quantitySpeakers").textContent),
                 };
+
                 fetch('/update-quantities', {
                     method: 'POST',
                     headers: {
@@ -222,6 +306,7 @@
                     });
             }
         </script>
+
     </div>
     </div>
     <div style="text-align: center;">
