Commit Warehouse CrowZ44

--- a/templates/clientrequest.html
+++ b/templates/clientrequest.html
@@ -37,20 +37,26 @@
                 </div>
                 <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
+            <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
                     <i class="fas fa-fw fa-folder"></i>
@@ -60,7 +66,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -69,9 +75,9 @@
                     <span>Ventas</span>
                 </a>
             </li>
-            
+
             <div class="sidebar-heading">
-                Tier 2: Proveedor de piezas Electrónicas
+                Tier 2: Provedor de piezas Electronicas
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2perequest">
@@ -82,7 +88,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2peship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -91,14 +97,8 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
-                Tier 2: Proveedor de piezas plásticas cosméticas
+                Tier 2: Provedor de piezas plasticas cosmeticas
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2pcrequest">
@@ -109,7 +109,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2pcship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -118,21 +118,17 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
-                Logística
+                Logistica
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/logship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
+
+            <!-- *********************************************************************************************  -->
 
             <hr class="sidebar-divider">
         </ul>
