--- a/templates/clientship.html
+++ b/templates/clientship.html
@@ -35,22 +35,28 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-mobile"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Tier 1: Provedor de Equipos</div>
+                <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
+            <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
                     <i class="fas fa-fw fa-folder"></i>
@@ -91,12 +97,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Tier 2: Provedor de piezas plasticas cosmeticas
             </div>
@@ -118,12 +118,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Logistica
             </div>
@@ -134,6 +128,7 @@
                 </a>
             </li>
 
+            <!-- *********************************************************************************************  -->
 
             <hr class="sidebar-divider">
         </ul>
