--- a/templates/t2pcsell.html
+++ b/templates/t2pcsell.html
@@ -43,20 +43,26 @@
                 </div>
                 <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
+            <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
                     <i class="fas fa-fw fa-folder"></i>
@@ -66,7 +72,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -77,7 +83,7 @@
             </li>
 
             <div class="sidebar-heading">
-                Tier 2: Proveedor de piezas Electrónicas
+                Tier 2: Provedor de piezas Electronicas
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2perequest">
@@ -88,7 +94,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2peship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -97,14 +103,8 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
-                Tier 2: Proveedor de piezas plásticas cosméticas
+                Tier 2: Provedor de piezas plasticas cosmeticas
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2pcrequest">
@@ -115,7 +115,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/t2pcship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -124,23 +124,18 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
-                Logística
+                Logistica
             </div>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/logship">
                     <i class="fas fa-fw fa-truck"></i>
-                    <span>Envíos</span>
+                    <span>Envios</span>
                 </a>
             </li>
-            <div>
-            </div>
+
+            <!-- *********************************************************************************************  -->
+
             <hr class="sidebar-divider">
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
