--- a/templates/index.html
+++ b/templates/index.html
@@ -27,32 +27,34 @@
 
     <!-- Page Wrapper -->
     <div id="wrapper">
-
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-mobile"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Tier 1: Provedor de Equipos</div>
+                <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
-
             <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
@@ -94,12 +96,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Tier 2: Provedor de piezas plasticas cosmeticas
             </div>
@@ -119,12 +115,6 @@
                 <a class="nav-link collapsed" href="/t2pcsell">
                     <i class="fas fa-fw fa-store"></i>
                     <span>Compras</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
                 </a>
             </li>
             <div class="sidebar-heading">
