--- a/templates/t2pesell.html
+++ b/templates/t2pesell.html
@@ -22,18 +22,28 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-mobile"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Tier 1: Provedor de Equipos</div>
+                <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
+            <!-- Divider -->
             <hr class="sidebar-divider">
+            <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
+            <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
                     <i class="fas fa-fw fa-folder"></i>
@@ -52,6 +62,7 @@
                     <span>Ventas</span>
                 </a>
             </li>
+
             <div class="sidebar-heading">
                 Tier 2: Provedor de piezas Electronicas
             </div>
@@ -71,12 +82,6 @@
                 <a class="nav-link collapsed" href="/t2pesell">
                     <i class="fas fa-fw fa-store"></i>
                     <span>Compras</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
                 </a>
             </li>
             <div class="sidebar-heading">
@@ -100,12 +105,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Logistica
             </div>
@@ -115,6 +114,9 @@
                     <span>Envios</span>
                 </a>
             </li>
+
+            <!-- *********************************************************************************************  -->
+
             <hr class="sidebar-divider">
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
