--- a/templates/t2peship.html
+++ b/templates/t2peship.html
@@ -34,24 +34,27 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-mobile"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Tier 1: Provedor de Equipos</div>
+                <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
-
-
             <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
@@ -71,7 +74,7 @@
                     <span>Ventas</span>
                 </a>
             </li>
-            
+
             <div class="sidebar-heading">
                 Tier 2: Provedor de piezas Electronicas
             </div>
@@ -91,12 +94,6 @@
                 <a class="nav-link collapsed" href="/t2pesell">
                     <i class="fas fa-fw fa-store"></i>
                     <span>Compras</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
                 </a>
             </li>
             <div class="sidebar-heading">
@@ -120,12 +117,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Logistica
             </div>
@@ -136,11 +127,8 @@
                 </a>
             </li>
 
-
             <!-- *********************************************************************************************  -->
 
- 
-            
             <hr class="sidebar-divider">
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
