--- a/templates/warehouse.html
+++ b/templates/warehouse.html
@@ -11,7 +11,6 @@
 
     <title>Tier 1: Equipos</title>
 
-    <!-- Custom fonts for this template-->
     <link href="/templates/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -35,24 +34,28 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-mobile"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Tier 1: Provedor de Equipos</div>
+            
+                <div class="sidebar-brand-text mx-3">Tier 1: Proveedor de Equipos</div>
             </a>
+            <!--************************************************************************************-->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-home"></i>
                     <span>Inicio</span></a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/warehouse">
+                    <i class="fas fa-fw fa-warehouse"></i>
+                    <span>Inventario</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
-            
             <!-- Heading -->
             <div class="sidebar-heading">
                 Clientes
             </div>
-
-
             <!-- *********************************************************************************************  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/clientrequest">
@@ -72,7 +75,7 @@
                     <span>Ventas</span>
                 </a>
             </li>
-            
+
             <div class="sidebar-heading">
                 Tier 2: Provedor de piezas Electronicas
             </div>
@@ -92,12 +95,6 @@
                 <a class="nav-link collapsed" href="/t2pesell">
                     <i class="fas fa-fw fa-store"></i>
                     <span>Compras</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pewarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
                 </a>
             </li>
             <div class="sidebar-heading">
@@ -121,12 +118,6 @@
                     <span>Compras</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/t2pcwarehouse">
-                    <i class="fas fa-fw fa-warehouse"></i>
-                    <span>Inventario</span>
-                </a>
-            </li>
             <div class="sidebar-heading">
                 Logistica
             </div>
@@ -137,11 +128,8 @@
                 </a>
             </li>
 
-
             <!-- *********************************************************************************************  -->
 
- 
-            
             <hr class="sidebar-divider">
         </ul>
         <div id="content-wrapper" class="d-flex flex-column">
@@ -150,7 +138,7 @@
                 
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Inventario de Tier2 Piezas Cosmeticas</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">Inventario</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -158,24 +146,18 @@
                                 <thead>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Position</th>
-                                        <th>Office</th>
-                                        <th>Age</th>
-                                        <th>Start date</th>
-                                        <th>Salary</th>
+                                        <th>Description</th>
+                                        <th>Stock</th>
                                     </tr>
                                 </thead>
-                                
                                 <tbody>
-                                    <tr>
-                                        <td>Tiger Nixon</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
-                                        <td>61</td>
-                                        <td>2011/04/25</td>
-                                        <td>$320,800</td>
-                                    </tr>
-                                  
+                                    {% for raw_materials in datos %}
+                                        <tr>
+                                            <td>{{ raw_materials.name }}</td>
+                                            <td>{{ raw_materials.description }}</td>
+                                            <td>{{ raw_materials.stock }}</td>
+                                        </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                             
@@ -193,13 +175,13 @@
 
 
     <!-- Bootstrap core JavaScript-->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/chart.js/Chart.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
+            <script src="/templates/vendor/jquery/jquery.min.js"></script>
+            <script src="/templates/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+            <script src="/templates/vendor/jquery-easing/jquery.easing.min.js"></script>
+            <script src="/templates/js/sb-admin-2.min.js"></script>
+            <script src="/templates/vendor/chart.js/Chart.min.js"></script>
+            <script src="/templates/js/demo/chart-area-demo.js"></script>
+            <script src="/templates/js/demo/chart-pie-demo.js"></script>
     
 
 </body>
